CMAKE_MINIMUM_REQUIRED(VERSION 2.9)

# Compiler
SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)

SET(LIBRARY_NAME "urbg2o")
SET(SOURCES "src/urbg2o.cpp" "src/bind.cpp")

add_subdirectory(thirdparty/pybind11)
LIST(APPEND CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake_modules)

OPTION(URBG2O_INSTALL "Install urbg2o?")

IF(APPLE)
	SET(CMAKE_SHARED_LIBRARY_SUFFIX ".so")
	SET(CMAKE_MACOSX_RPATH ON)
ENDIF(APPLE)

FIND_PACKAGE(PythonLibs 3 REQUIRED)
FIND_PACKAGE(g2o REQUIRED)
FIND_PACKAGE(Eigen3 REQUIRED)
FIND_PACKAGE(CSparse REQUIRED)
FIND_PACKAGE(Cholmod REQUIRED)
FIND_PACKAGE(OpenCV REQUIRED)

ADD_LIBRARY(${LIBRARY_NAME} MODULE ${SOURCES})

INCLUDE_DIRECTORIES(
	${CMAKE_CURRENT_SOURCE_DIR}
	${G2O_INCLUDE_DIR}
	${CSPARSE_INCLUDE_DIR}
	${Cholmod_INCLUDE_DIR}
	${EIGEN3_INCLUDE_DIR}
	${OpenCV_INCLUDE_DIR}
	${PYTHON_INCLUDE_DIRS}
)

install(DIRECTORY ${PYBIND11_INCLUDE_DIR}/pybind11 DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})

LIST(APPEND G2O_LIBS
	${G2O_CORE_LIBRARY} ${G2O_STUFF_LIBRARY} ${G2O_SOLVER_CHOLMOD} ${G2O_SOLVER_CSPARSE}
	${G2O_SOLVER_CSPARSE_EXTENSION} ${G2O_SOLVER_DENSE} ${G2O_TYPES_SBA}
	${G2O_CLI_LIBRARY} ${G2O_SOLVER_SLAM2D_LINEAR} ${G2O_TYPES_ICP} ${G2O_TYPES_SLAM2D}
	${G2O_SOLVER_STRUCTURE_ONLY} ${G2O_TYPES_SLAM3D} ${G2O_TYPES_SCLAM2D} ${G2O_SOLVER_PCG} 
	${G2O_TYPES_DATA} ${G2O_TYPES_SIM3}
)

target_link_libraries(${LIBRARY_NAME}
	${G2O_LIBS}
	${PYTHON_LIBRARIES}
	${OpenCV_LIBS}
	pybind11::module
)
